tests/neg/main-annotation-nonstatic.scala
class A:
  @main def foo(bar: Int) = () // error